<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">%1$s won\'t run unless you update the Android Wear app.</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="API_ERROR_BAD_CREDENTIALS">That username or password is incorrect.</string>
    <string name="API_ERROR_DESCRIPTION_INVALID_LENGTH">Your caption must be 140 characters or less.</string>
    <string name="API_ERROR_LOCATION_INVALID_LENGTH">Your location must be 32 characters or less.</string>
    <string name="API_ERROR_UNKNOWN_ERROR">An unknown error occurred.</string>
    <string name="NUX_are_you_sure_you_want_to_skip">Are you sure you want to skip this chance to personalize Vine?</string>
    <string name="NUX_because_you_like">Because you like %1$s</string>
    <string name="NUX_channel_like_confirm">Thanks! Your Home feed will now include a few hand-picked %1$s Vines.</string>
    <string name="NUX_channels_on_vine">Channels on Vine</string>
    <string name="NUX_find_your_friends">Find your friends</string>
    <string name="NUX_go_back">Go back</string>
    <string name="NUX_number_friends_on_vine">%1$d friends on Vine</string>
    <string name="NUX_tap_like_channel">Tap Like to see a few daily Vines from this channel in your Home feed.</string>
    <string name="NUX_what_do_you_like">What do you like?</string>
    <string name="NUX_yes_im_sure">Yes, I’m sure</string>
    <string name="accept_failed">Unable to accept</string>
    <string name="action_settings">Settings</string>
    <string name="activity_empty">You don\'t have any activity yet.</string>
    <string name="activity_error">An error occurred while trying to update Activity. Please try again later.</string>
    <string name="activity_notification_big_title">New Vine Activity</string>
    <string name="activity_notification_subtext">Tap to view all Vine activity.</string>
    <string name="add">Save</string>
    <string name="add_a_comment">Add a comment?</string>
    <string name="add_a_comment_detailed">Add a comment when you share to Twitter, Facebook, Tumblr, or with friends!</string>
    <string name="add_a_message">Add a message?</string>
    <string name="add_a_note">Add a note</string>
    <string name="add_account">Add account</string>
    <string name="add_capture_widget">Record more quickly! You can instantly jump to the Vine camera right from your home screen using the new capture widget.</string>
    <string name="add_capture_widget_title">Fast Capture Widget</string>
    <string name="add_comment">Add a comment?</string>
    <string name="add_location">Add location</string>
    <string name="add_to_channel">Add to a channel</string>
    <string name="add_widget">Add Widget</string>
    <string name="again_question">Again?</string>
    <string name="all_clips_deleted">All clips have been deleted</string>
    <string name="all_featured_posts">All featured Vines</string>
    <string name="almost_done">Sending post to Vine\'s servers</string>
    <string name="amount_of_vid_selected">%d Selected</string>
    <string name="and_x_others_plural">&amp; %d others</string>
    <string name="and_x_others_single">&amp; 1 other</string>
    <string name="app_name">Vine</string>
    <string name="artist_and_track_title">%1$s - %2$s</string>
    <string name="authenticator_activity_title">Log in</string>
    <string name="based_on">Based on Vines you like</string>
    <string name="block_button">Block</string>
    <string name="block_or_report">Block user or report</string>
    <string name="block_or_report_comment">Block user or report comment?</string>
    <string name="block_person">Block person</string>
    <string name="block_person_explanation">User will no longer be able to follow you</string>
    <string name="block_user_comment_delete_prompt">Comment was successfully deleted. Would you like to block this user or report this comment?</string>
    <string name="block_user_comment_spam_prompt">Comment was successfully reported. Would you like to block this user?</string>
    <string name="block_username">Block %s</string>
    <string name="block_username_explanation">%s will no longer be able to follow you</string>
    <string name="camera_failed_to_open">Camera cannot be accessed because it is being used by another application right now. Restart the app or your phone may resolve this issue.</string>
    <string name="camera_onboarding_grab_video_from_camera_roll">Grab a video from your camera roll</string>
    <string name="camera_onboarding_more_camera_tools">Access more camera tools here</string>
    <string name="camera_onboarding_tools">Grid, Focus lock, Ghost, &amp; Torch</string>
    <string name="camera_onboarding_tooltip_focus">Focus</string>
    <string name="camera_onboarding_tooltip_ghost">Ghost</string>
    <string name="camera_onboarding_tooltip_grid">Grid</string>
    <string name="camera_onboarding_tooltip_torch">Torch</string>
    <string name="camera_onboarding_undo_cancel">Or tap anywhere else to cancel</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="done">Done</string>
    <string name="file_report">File a report</string>
    <string name="follow_vine_on_twitter">Follow Vine on Twitter</string>
    <string name="great_taste">You have great taste!</string>
    <string name="hide_revines">Hide Revines</string>
    <string name="likes_are_saved">Likes are saved in your likes tab</string>
    <string name="login_password">Password</string>
    <string name="login_username">Email</string>
    <string name="message">Message</string>
    <string name="more_vines">We\'ll be sure to recommend\n      more Vines like these!</string>
    <string name="mute">Mute audio</string>
    <string name="optional">Optional</string>
    <string name="share_profile">Share profile</string>
    <string name="sign_up_tos_line_1">By signing up, you agree to the</string>
    <string name="signup_name_hint">Full name</string>
    <string name="signup_phone">Phone (optional)</string>
</resources>