<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <co.vine.android.widget.TypefacesEditText
        android:id="@+id/signup_email"
        android:layout_marginBottom="11dp"
        android:hint="@string/login_username"
        android:inputType="textEmailAddress"
        style="@style/EditText.SignIn"/>
    <co.vine.android.widget.TypefacesEditText
        android:id="@+id/signup_password"
        android:layout_marginBottom="11dp"
        android:hint="@string/login_password"
        android:singleLine="true"
        android:layout_below="@+id/signup_email"
        android:inputType="textVisiblePassword"
        style="@style/EditText.SignIn"/>
    <co.vine.android.widget.TypefacesEditText
        android:id="@+id/signup_phone"
        android:layout_marginBottom="20dp"
        android:hint="@string/signup_phone"
        android:singleLine="true"
        android:layout_below="@+id/signup_password"
        android:inputType="phone"
        android:imeOptions="actionDone"
        style="@style/EditText.SignIn"/>
    <co.vine.android.widget.TypefacesTextView
        android:id="@+id/tos_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_tos_line_1"
        android:layout_below="@+id/signup_phone"
        style="@style/SignupTOS"/>
    <co.vine.android.widget.TypefacesTextView
        android:id="@+id/tos_line_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/tos_line"
        style="@style/SignupTOS"/>
</RelativeLayout>
