<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/avatar_username_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
        <RelativeLayout
            android:id="@+id/user_image_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <include layout="@layout/user_image_container_large"/>
        </RelativeLayout>
        <co.vine.android.widget.TypefacesEditText
            android:id="@+id/sign_up_username"
            android:hint="@string/signup_name_hint"
            android:layout_below="@+id/user_image_container"
            android:inputType="textNoSuggestions"
            style="@style/EditText.SignIn"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/phone_tos_container"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_username">
            <co.vine.android.widget.TypefacesEditText
                android:id="@+id/signup_name_phone"
                android:hint="@string/signup_phone"
                android:singleLine="true"
                android:inputType="phone"
                android:imeOptions="actionDone"
                style="@style/EditText.SignIn"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <LinearLayout
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:id="@+id/follow_vine_on_twitter_selection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/twitter_vine_follow_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/follow_vine_on_twitter"
                        android:layout_centerHorizontal="true"
                        style="@style/SignupTOS"/>
                    <CheckBox
                        android:id="@+id/twitter_vine_follow_enabled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:checked="true"
                        android:button="@drawable/vine_twitter_follow"/>
                </LinearLayout>
                <co.vine.android.widget.TypefacesTextView
                    android:id="@+id/tos_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/sign_up_tos_line_1"
                    style="@style/SignupTOS"/>
                <co.vine.android.widget.TypefacesTextView
                    android:id="@+id/tos_line_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    style="@style/SignupTOS"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
