<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/tumblr_navy"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/background_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <RelativeLayout
        android:id="@+id/transparency"
        android:background="#50000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <RelativeLayout
        android:id="@+id/solicitor_title"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">
            <co.vine.android.widget.TypefacesTextView
                android:textSize="15sp"
                android:textColor="@color/solid_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/great_taste"/>
            <co.vine.android.widget.TypefacesTextView
                android:textSize="11sp"
                android:textColor="@color/white_forty_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/likes_are_saved"/>
        </LinearLayout>
        <co.vine.android.widget.TypefacesTextView
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/solid_white"
            android:id="@+id/done_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/done"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/video_thumbnail_container"
        android:background="#50000000"
        android:layout_width="340dp"
        android:layout_height="340dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/solicitor_title"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">
            <ImageView
                android:id="@+id/thumbnail1"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignLeft="@+id/thumbnail2"
                android:layout_alignTop="@+id/thumbnail2"/>
            <ImageView
                android:id="@+id/thumbnail2"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignLeft="@+id/thumbnail3"
                android:layout_alignTop="@+id/thumbnail3"/>
            <ImageView
                android:id="@+id/thumbnail3"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignLeft="@+id/thumbnail4"
                android:layout_alignTop="@+id/thumbnail4"/>
            <ImageView
                android:id="@+id/thumbnail4"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignLeft="@+id/thumbnail5"
                android:layout_alignTop="@+id/thumbnail5"/>
            <ImageView
                android:id="@+id/thumbnail5"
                android:layout_width="140dp"
                android:layout_height="140dp"/>
        </RelativeLayout>
    </RelativeLayout>
    <co.vine.android.widget.TypefacesTextView
        android:textSize="15sp"
        android:textStyle="normal"
        android:textColor="@color/white_forty_percent"
        android:id="@+id/video_caption"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/more_vines"
        android:singleLine="false"
        android:layout_below="@+id/video_thumbnail_container"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/again"
        android:background="@drawable/solicitor_btn_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/again_question"
        android:layout_below="@+id/video_caption"
        android:layout_centerHorizontal="true"
        style="@style/SolicitorPromptButtonText"/>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:paddingBottom="0dp"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="?android:attr/progressBarStyleHorizontal"/>
</RelativeLayout>
