<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:orientation="horizontal"
        android:id="@+id/block_person_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <co.vine.android.widget.TypefacesTextView
            android:textSize="@dimen/font_size_large"
            android:textStyle="bold"
            android:textColor="#ff5967"
            android:id="@+id/block_person_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/block_person"/>
        <co.vine.android.widget.TypefacesTextView
            android:id="@+id/block_person_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/block_person_explanation"
            android:layout_below="@+id/block_person_text"
            style="@style/ReportScreenSubtitleText"/>
        <View
            android:id="@+id/block_switch"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="@dimen/standard_spacing_large"
            android:src="@drawable/selection_indicator"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View
        android:id="@+id/bottom_divider"
        android:background="@color/list_divider_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_thickness"
        android:layout_marginTop="10dp"/>
    <RelativeLayout
        android:orientation="horizontal"
        android:id="@+id/report_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <co.vine.android.widget.TypefacesTextView
            android:textSize="@dimen/font_size_large"
            android:textStyle="bold"
            android:id="@+id/file_report_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/file_report"/>
        <co.vine.android.widget.TypefacesTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/optional"
            android:layout_below="@+id/file_report_text"
            style="@style/ReportScreenSubtitleText"/>
        <View
            android:id="@+id/report_switch"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="@dimen/standard_spacing_large"
            android:src="@drawable/selection_indicator"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:orientation="vertical"
        android:id="@+id/reporting_background_container"
        android:background="@color/solid_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/reporting_custom_menu"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <co.vine.android.views.SdkProgressBar
                android:layout_gravity="center"
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                style="?android:attr/progressBarStyle"/>
            <co.vine.android.widget.TypefacesTextView
                android:layout_gravity="center_horizontal"
                android:id="@+id/reporting_prompt"
                android:background="#f5f5f5"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.twitter.android.widget.RefreshableListView
                android:id="@android:id/list"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/List.Refreshable"/>
        </LinearLayout>
        <View
            android:id="@+id/bottom_padding_view"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"/>
        <Button
            android:textSize="@dimen/font_size_xlarge"
            android:textStyle="bold"
            android:textColor="@color/solid_white"
            android:id="@+id/report_button"
            android:background="@drawable/report_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tabbar_height"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:text="@string/block_button"
            android:layout_above="@+id/bottom_padding_view"/>
    </RelativeLayout>
</LinearLayout>
